--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "laravelcollective/html": "^6.4",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
@@ -31,8 +32,12 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
-        }
+            "Tests\\": "tests/",
+            "Bulbul5391\\EnglishToBangla\\": "package/english-to-bangla/src"
+        },
+        "files": [
+            "app/Helpers/EnToBnHelper.php"
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
