--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravelcollective/html": "^6.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -29,8 +30,12 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
-        }
+            "Tests\\": "tests/",
+            "Bulbul5391\\EnglishToBangla\\": "package/english-to-bangla/src"
+        },
+        "files": [
+            "app/Helpers/EnToBnHelper.php"
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
